Create media query mixin & breakpoints variables

--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -12,3 +12,9 @@
     pointer-events: none;
     z-index: -1;
 }
+
+@mixin respond-to($breakpoint) {
+    @media #{$breakpoint} {
+        @content;
+    }
+}
