--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -34,3 +34,8 @@ $border-radius-16: 1.6rem;
 $border-radius-20: 2rem;
 $border-radius-24: 2.4rem;
 $border-radius-full: 999px;
+
+$breakpoint-small-mobiles: "(min-width: 20em) and (max-width: 30em)";
+$breakpoint-large-mobiles: "(min-width: 30.063em) and (max-width: 47.94em)";
+$breakpoint-tablets: "(min-width: 48em) and (max-width: 64em)";
+$breakpoint-large-tablets: "(min-width: 64.063em) and (max-width: 79.063em)";
