--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -79,12 +79,7 @@
     }
 }
 
-/* HACK: small mobiles (320px ~ 480px) */
-/* HACK: large mobiles (481px ~ 767px) */
-/* HACK: tablets (768px ~ 1024px) */
-
-//* HACK: small mobiles (320px ~ 480px) */
-@media (min-width: 20em) and (max-width: 30em) {
+@include respond-to($breakpoint-small-mobiles) {
     .hero {
         padding: $spacing-24 $spacing-16 $spacing-80;
         gap: $spacing-48;
@@ -112,8 +107,8 @@
     }
 }
 
-//* HACK: large mobiles (481px ~ 767px) */
-@media (min-width: 30.063em) and (max-width: 47.94em) {
+
+@include respond-to($breakpoint-large-mobiles) {
     .hero {
         padding: $spacing-32 $spacing-32 $spacing-48;
         gap: $spacing-48;
@@ -129,7 +124,7 @@
     }
 }
 
-//* Repetitive styles for tablets
+
 @media (min-width: 48em) and (max-width: 79.063em) {
     .hero {
         gap: $spacing-64;
@@ -146,8 +141,7 @@
     }
 }
 
-//* HACK: tablets (768px ~ 1024px) */
-@media (min-width: 48em) and (max-width: 64em) {
+@include respond-to($breakpoint-tablets) {
     .hero {
         padding: $spacing-32 $spacing-32 $spacing-80;
 
@@ -162,11 +156,20 @@
     }
 }
 
-//* HACK: large tablets (1025px ~ 1265px) */
-@media (min-width: 64.063em) and (max-width: 79.063em) {
+
+@include respond-to($breakpoint-large-tablets) {
     .hero {
         &__content {
             grid-template-columns: repeat(2, 1fr);
+            align-items: stretch;
+
+            &-info {
+                align-self: center;
+            }
+
+            &-title {
+                font-size: 5.4rem;
+            }
         }
 
         padding: $spacing-64 $spacing-48;
