--- a/styles/main.css
+++ b/styles/main.css
@@ -697,6 +697,7 @@ body {
   .journey {
     margin: 6.4rem 4.8rem 8rem;
     padding: 6.4rem 4.8rem;
+    border: 1px solid red;
   }
   .journey::after {
     content: "";
