--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -1,181 +1,178 @@
 .hero {
-    background-image: url("../starter-code/assets/images/pattern-light-bg.svg");
-    background-color: $color-neutral-100;
-    width: 100%;
-    height: auto;
-    padding: $spacing-32 13.5rem $spacing-80;
-    position: relative;
-    overflow: hidden;
-    z-index: 10;
+  background-image: url("../assets/images/pattern-light-bg.svg");
+  background-color: $color-neutral-100;
+  width: 100%;
+  height: auto;
+  padding: $spacing-32 13.5rem $spacing-80;
+  position: relative;
+  overflow: hidden;
+  z-index: 10;
 
-    @extend %flexbox-style;
+  @extend %flexbox-style;
 
-    flex-direction: column;
-    align-items: flex-start;
-    gap: $spacing-80;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: $spacing-80;
 
-    &::after {
-        @include blur-effect(50%, -30%);
+  &::after {
+    @include blur-effect(50%, -30%);
+  }
+
+  &__content {
+    @extend %grid-container;
+
+    grid-template-columns: 1fr 54rem;
+    column-gap: $spacing-64;
+
+    &-title {
+      @extend %text-preset-1;
+
+      background: $color-gradient-text-gradient;
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: $spacing-24;
     }
 
-    &__content {
-        @extend %grid-container;
+    &-description {
+      @extend %text-preset-5;
 
-        grid-template-columns: 1fr 54rem;
-        column-gap: $spacing-64;
-
-        &-title {
-            @extend %text-preset-1;
-
-            background: $color-gradient-text-gradient;
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: $spacing-24;
-        }
-
-        &-description {
-            @extend %text-preset-5;
-
-            color: $color-neutral-700;
-            margin-bottom: $spacing-32;
-        }
-
-        &-btn {
-            margin-bottom: $spacing-20;
-        }
-
-        &-reviews {
-            @extend %flexbox-style;
-
-            justify-content: start;
-            align-items: center;
-            gap: $spacing-12;
-        }
-
-        &-avatars {
-            max-width: 11rem;
-        }
-
-        &-rating {
-            img {
-                width: 2.4rem;
-                height: 2.4rem;
-                margin-bottom: $spacing-4;
-            }
-
-            p {
-                @extend %text-preset-7;
-
-                color: $color-neutral-700;
-            }
-        }
-
-        &-image {
-            width: 100%;
-            height: 100%;
-            border-radius: $border-radius-10;
-        }
+      color: $color-neutral-700;
+      margin-bottom: $spacing-32;
     }
+
+    &-btn {
+      margin-bottom: $spacing-20;
+    }
+
+    &-reviews {
+      @extend %flexbox-style;
+
+      justify-content: start;
+      align-items: center;
+      gap: $spacing-12;
+    }
+
+    &-avatars {
+      max-width: 11rem;
+    }
+
+    &-rating {
+      img {
+        width: 2.4rem;
+        height: 2.4rem;
+        margin-bottom: $spacing-4;
+      }
+
+      p {
+        @extend %text-preset-7;
+
+        color: $color-neutral-700;
+      }
+    }
+
+    &-image {
+      width: 100%;
+      height: 100%;
+      border-radius: $border-radius-10;
+    }
+  }
 }
 
 @include respond-to($breakpoint-small-mobiles) {
-    .hero {
-        padding: $spacing-24 $spacing-16 $spacing-80;
-        gap: $spacing-48;
+  .hero {
+    padding: $spacing-24 $spacing-16 $spacing-80;
+    gap: $spacing-48;
 
-        &::after {
-            @include blur-effect(100%, 100%);
-        }
-
-        &__content {
-            grid-template-columns: 1fr;
-            row-gap: $spacing-64;
-
-            &-title {
-                font-size: 3.8rem;
-            }
-
-            &-description {
-                letter-spacing: -0.2px;
-            }
-
-            &-btn {
-                font-size: calc(1.2rem + .2vw);
-            }
-        }
+    &::after {
+      @include blur-effect(100%, 100%);
     }
-}
 
+    &__content {
+      grid-template-columns: 1fr;
+      row-gap: $spacing-64;
+
+      &-title {
+        font-size: 3.8rem;
+      }
+
+      &-description {
+        letter-spacing: -0.2px;
+      }
+
+      &-btn {
+        font-size: calc(1.2rem + 0.2vw);
+      }
+    }
+  }
+}
 
 @include respond-to($breakpoint-large-mobiles) {
-    .hero {
-        padding: $spacing-32 $spacing-32 $spacing-48;
-        gap: $spacing-48;
+  .hero {
+    padding: $spacing-32 $spacing-32 $spacing-48;
+    gap: $spacing-48;
 
-        &::after {
-            @include blur-effect(76%, -50%);
-        }
-
-        &__content {
-            grid-template-columns: 1fr;
-            row-gap: $spacing-64;
-        }
+    &::after {
+      @include blur-effect(76%, -50%);
     }
+
+    &__content {
+      grid-template-columns: 1fr;
+      row-gap: $spacing-64;
+    }
+  }
 }
 
-
 @media (min-width: 48em) and (max-width: 79.063em) {
-    .hero {
-        gap: $spacing-64;
+  .hero {
+    gap: $spacing-64;
 
-        &__content {
-            &-title {
-                letter-spacing: -1px;
-            }
+    &__content {
+      &-title {
+        letter-spacing: -1px;
+      }
 
-            &-description {
-                letter-spacing: -0.2px;
-            }
-        }
+      &-description {
+        letter-spacing: -0.2px;
+      }
     }
+  }
 }
 
 @include respond-to($breakpoint-tablets) {
-    .hero {
-        padding: $spacing-32 $spacing-32 $spacing-80;
+  .hero {
+    padding: $spacing-32 $spacing-32 $spacing-80;
 
-        &::after {
-            @include blur-effect(73%, -50%);
-        }
-
-        &__content {
-            grid-template-columns: 1fr;
-            row-gap: $spacing-64;
-        }
+    &::after {
+      @include blur-effect(73%, -50%);
     }
+
+    &__content {
+      grid-template-columns: 1fr;
+      row-gap: $spacing-64;
+    }
+  }
 }
 
-
 @include respond-to($breakpoint-large-tablets) {
-    .hero {
-        &__content {
-            grid-template-columns: repeat(2, 1fr);
-            align-items: stretch;
+  .hero {
+    &__content {
+      grid-template-columns: repeat(2, 1fr);
+      align-items: stretch;
 
-            &-info {
-                align-self: center;
-            }
+      &-info {
+        align-self: center;
+      }
 
-            &-title {
-                font-size: 5.4rem;
-            }
-        }
-
-        padding: $spacing-64 $spacing-48;
-
-        &::after {
-            @include blur-effect(50%, -30%);
-        }
+      &-title {
+        font-size: 5.4rem;
+      }
     }
+
+    padding: $spacing-64 $spacing-48;
+
+    &::after {
+      @include blur-effect(50%, -30%);
+    }
+  }
 }
