Complete hero section renewal mobile version

--- a/styles/abstracts/_placeholders.scss
+++ b/styles/abstracts/_placeholders.scss
@@ -54,3 +54,16 @@
   );
   cursor: pointer;
 }
+
+%grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-items: center;
+}
+
+%flexbox-style {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
