--- a/styles/layout/_journey.scss
+++ b/styles/layout/_journey.scss
@@ -1,177 +1,177 @@
-.journey {
-  margin: 0 13.5rem 12rem;
-  background-image: url("../assets/images/pattern-light-bg.svg");
-  background-color: $color-neutral-100;
-  padding: $spacing-80 0;
-  position: relative;
-  z-index: 10;
-  overflow: hidden;
-  border-radius: $border-radius-12;
-
-  @extend %flexbox-style;
-
-  flex-direction: column;
-  gap: $spacing-64;
-
-  &::after {
-    @include blur-effect(32%, -28%);
-  }
-
-  header {
-    max-width: 51.2rem;
-    text-align: center;
-  }
-
-  &__title {
-    @extend %text-preset-2;
-
-    line-height: 1.2;
-    letter-spacing: -0.4rem;
-  }
-
-  &__steps {
-    @extend %grid-container;
-
-    grid-template-columns: repeat(4, 22.6rem);
-    column-gap: $spacing-48;
-  }
-
-  &__step {
-    @extend %text-preset-4-regular;
-
-    &--number {
-      span,
-      img {
-        display: inline-block;
-      }
-
-      span {
-        line-height: 1;
-        color: $color-neutral-900;
-        box-shadow: inset 0 0 0 2px $color-neutral-900;
-        width: 4rem;
-        height: 4rem;
-        border-radius: $border-radius-4;
-        text-align: center;
-        padding: 0.8rem 0.4rem;
-      }
-
-      @extend %flexbox-style;
-
-      max-width: 100%;
-      justify-content: space-between;
-      margin-bottom: $spacing-24;
-    }
-
-    p {
-      @extend %text-preset-6;
-    }
-  }
-}
-
-@include respond-to($breakpoint-small-mobiles) {
-  .journey {
-    margin: 0 $spacing-16 $spacing-64;
-    padding: $spacing-48 $spacing-32;
-    gap: $spacing-48;
-
-    &::after {
-      @include blur-effect(100%, 100%);
-    }
-
-    header {
-      max-width: 100%;
-    }
-
-    &__title {
-      font-size: 3.8rem;
-      letter-spacing: -0.2rem;
-    }
-
-    &__steps {
-      grid-template-columns: 1fr;
-      row-gap: $spacing-32;
-    }
-
-    &__step {
-      justify-items: center;
-
-      p {
-        justify-self: start;
-      }
-
-      &--number {
-        img {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
-@include respond-to($breakpoint-large-mobiles) {
-  .journey {
-    margin: $spacing-32 $spacing-24;
-    padding: $spacing-32 $spacing-24;
-    gap: $spacing-48;
-
-    &::after {
-      @include blur-effect(100%, 100%);
-    }
-
-    header {
-      max-width: 100%;
-    }
-
-    &__title {
-      font-size: 4.2rem;
-      letter-spacing: -0.2rem;
-    }
-
-    &__steps {
-      grid-template-columns: 1fr 1fr;
-      gap: $spacing-32;
-    }
-
-    &__step {
-      p {
-        font-size: 1.6rem;
-      }
-    }
-  }
-}
-
-@include respond-to($breakpoint-tablets) {
-  .journey {
-    margin: $spacing-32 $spacing-32 $spacing-80;
-    padding: $spacing-48 $spacing-32;
-    gap: $spacing-48;
-
-    &::after {
-      @include blur-effect(53%, -33%);
-    }
-
-    &__steps {
-      grid-template-columns: repeat(2, 1fr);
-      column-gap: $spacing-64;
-      row-gap: $spacing-48;
-    }
-  }
-}
-
-@include respond-to($breakpoint-large-tablets) {
-  .journey {
-    margin: $spacing-64 $spacing-48 $spacing-80;
-    padding: $spacing-64 $spacing-48;
-
-    &::after {
-      @include blur-effect(50%, -33%);
-    }
-
-    &__steps {
-      grid-template-columns: repeat(3, 1fr);
-      column-gap: $spacing-80;
-      row-gap: $spacing-64;
-    }
-  }
-}
+/* .journey { */
+/*   margin: 0 13.5rem 12rem; */
+/*   background-image: url("../assets/images/pattern-light-bg.svg"); */
+/*   background-color: $color-neutral-100; */
+/*   padding: $spacing-80 0; */
+/*   position: relative; */
+/*   z-index: 10; */
+/*   overflow: hidden; */
+/*   border-radius: $border-radius-12; */
+/**/
+/*   @extend %flexbox-style; */
+/**/
+/*   flex-direction: column; */
+/*   gap: $spacing-64; */
+/**/
+/*   &::after { */
+/*     @include blur-effect(32%, -28%); */
+/*   } */
+/**/
+/*   header { */
+/*     max-width: 51.2rem; */
+/*     text-align: center; */
+/*   } */
+/**/
+/*   &__title { */
+/*     @extend %text-preset-2; */
+/**/
+/*     line-height: 1.2; */
+/*     letter-spacing: -0.4rem; */
+/*   } */
+/**/
+/*   &__steps { */
+/*     @extend %grid-container; */
+/**/
+/*     grid-template-columns: repeat(4, 22.6rem); */
+/*     column-gap: $spacing-48; */
+/*   } */
+/**/
+/*   &__step { */
+/*     @extend %text-preset-4-regular; */
+/**/
+/*     &--number { */
+/*       span, */
+/*       img { */
+/*         display: inline-block; */
+/*       } */
+/**/
+/*       span { */
+/*         line-height: 1; */
+/*         color: $color-neutral-900; */
+/*         box-shadow: inset 0 0 0 2px $color-neutral-900; */
+/*         width: 4rem; */
+/*         height: 4rem; */
+/*         border-radius: $border-radius-4; */
+/*         text-align: center; */
+/*         padding: 0.8rem 0.4rem; */
+/*       } */
+/**/
+/*       @extend %flexbox-style; */
+/**/
+/*       max-width: 100%; */
+/*       justify-content: space-between; */
+/*       margin-bottom: $spacing-24; */
+/*     } */
+/**/
+/*     p { */
+/*       @extend %text-preset-6; */
+/*     } */
+/*   } */
+/* } */
+/**/
+/* @include respond-to($breakpoint-small-mobiles) { */
+/*   .journey { */
+/*     margin: 0 $spacing-16 $spacing-64; */
+/*     padding: $spacing-48 $spacing-32; */
+/*     gap: $spacing-48; */
+/**/
+/*     &::after { */
+/*       @include blur-effect(100%, 100%); */
+/*     } */
+/**/
+/*     header { */
+/*       max-width: 100%; */
+/*     } */
+/**/
+/*     &__title { */
+/*       font-size: 3.8rem; */
+/*       letter-spacing: -0.2rem; */
+/*     } */
+/**/
+/*     &__steps { */
+/*       grid-template-columns: 1fr; */
+/*       row-gap: $spacing-32; */
+/*     } */
+/**/
+/*     &__step { */
+/*       justify-items: center; */
+/**/
+/*       p { */
+/*         justify-self: start; */
+/*       } */
+/**/
+/*       &--number { */
+/*         img { */
+/*           display: none; */
+/*         } */
+/*       } */
+/*     } */
+/*   } */
+/* } */
+/**/
+/* @include respond-to($breakpoint-large-mobiles) { */
+/*   .journey { */
+/*     margin: $spacing-32 $spacing-24; */
+/*     padding: $spacing-32 $spacing-24; */
+/*     gap: $spacing-48; */
+/**/
+/*     &::after { */
+/*       @include blur-effect(100%, 100%); */
+/*     } */
+/**/
+/*     header { */
+/*       max-width: 100%; */
+/*     } */
+/**/
+/*     &__title { */
+/*       font-size: 4.2rem; */
+/*       letter-spacing: -0.2rem; */
+/*     } */
+/**/
+/*     &__steps { */
+/*       grid-template-columns: 1fr 1fr; */
+/*       gap: $spacing-32; */
+/*     } */
+/**/
+/*     &__step { */
+/*       p { */
+/*         font-size: 1.6rem; */
+/*       } */
+/*     } */
+/*   } */
+/* } */
+/**/
+/* @include respond-to($breakpoint-tablets) { */
+/*   .journey { */
+/*     margin: $spacing-32 $spacing-32 $spacing-80; */
+/*     padding: $spacing-48 $spacing-32; */
+/*     gap: $spacing-48; */
+/**/
+/*     &::after { */
+/*       @include blur-effect(53%, -33%); */
+/*     } */
+/**/
+/*     &__steps { */
+/*       grid-template-columns: repeat(2, 1fr); */
+/*       column-gap: $spacing-64; */
+/*       row-gap: $spacing-48; */
+/*     } */
+/*   } */
+/* } */
+/**/
+/* @include respond-to($breakpoint-large-tablets) { */
+/*   .journey { */
+/*     margin: $spacing-64 $spacing-48 $spacing-80; */
+/*     padding: $spacing-64 $spacing-48; */
+/**/
+/*     &::after { */
+/*       @include blur-effect(50%, -33%); */
+/*     } */
+/**/
+/*     &__steps { */
+/*       grid-template-columns: repeat(3, 1fr); */
+/*       column-gap: $spacing-80; */
+/*       row-gap: $spacing-64; */
+/*     } */
+/*   } */
+/* } */
