--- a/styles/layout/_review.scss
+++ b/styles/layout/_review.scss
@@ -1,61 +1,61 @@
-.review {
-    @extend %flexbox-style;
-
-    max-width: 97rem;
-    margin: 0 auto 12rem;
-    flex-direction: column;
-    gap: $spacing-32;
-
-    &__description {
-        @extend %text-preset-3;
-
-        color: $color-neutral-900;
-        text-align: center;
-    }
-
-    &__author {
-        @extend %text-preset-5;
-
-        color: $color-neutral-700;
-    }
-}
-
-@include respond-to($breakpoint-small-mobiles) {
-    .review {
-        margin: $spacing-64 auto;
-        padding: 0 $spacing-16;
-        align-items: baseline;
-
-        &__description {
-            text-align: left;
-            font-size: 2.4rem;
-        }
-    }
-}
-
-
-@include respond-to($breakpoint-large-mobiles) {
-    .review {
-        padding: 0 $spacing-32;
-        align-items: baseline;
-
-        &__description {
-            text-align: left;
-            font-size: 3.2rem;
-            line-height: 1.1;
-        }
-    }
-}
-
-
-//* HACK tablets (768px ~ 1024px)
-@include respond-to($breakpoint-tablets) {
-    .review {
-        padding: 0 $spacing-32;
-        align-items: baseline;
-
-        &__description {
-            text-align: left;
-        }
-    }
-}
+/* .review { */
+/*     @extend %flexbox-style; */
+/**/
+/*     max-width: 97rem; */
+/*     margin: 0 auto 12rem; */
+/*     flex-direction: column; */
+/*     gap: $spacing-32; */
+/**/
+/*     &__description { */
+/*         @extend %text-preset-3; */
+/**/
+/*         color: $color-neutral-900; */
+/*         text-align: center; */
+/*     } */
+/**/
+/*     &__author { */
+/*         @extend %text-preset-5; */
+/**/
+/*         color: $color-neutral-700; */
+/*     } */
+/* } */
+/**/
+/* @include respond-to($breakpoint-small-mobiles) { */
+/*     .review { */
+/*         margin: $spacing-64 auto; */
+/*         padding: 0 $spacing-16; */
+/*         align-items: baseline; */
+/**/
+/*         &__description { */
+/*             text-align: left; */
+/*             font-size: 2.4rem; */
+/*         } */
+/*     } */
+/* } */
+/**/
+/**/
+/* @include respond-to($breakpoint-large-mobiles) { */
+/*     .review { */
+/*         padding: 0 $spacing-32; */
+/*         align-items: baseline; */
+/**/
+/*         &__description { */
+/*             text-align: left; */
+/*             font-size: 3.2rem; */
+/*             line-height: 1.1; */
+/*         } */
+/*     } */
+/* } */
+/**/
+/**/
+/* //* HACK tablets (768px ~ 1024px) */
+/* @include respond-to($breakpoint-tablets) { */
+/*     .review { */
+/*         padding: 0 $spacing-32; */
+/*         align-items: baseline; */
+/**/
+/*         &__description { */
+/*             text-align: left; */
+/*         } */
+/*     } */
+/* } */
