Complete hero section renewal tablet version

--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -1,20 +1,19 @@
 @mixin blur-effect($top, $right) {
-    content: "";
-    position: absolute;
-    top: $top;
-    right: $right;
-    background-color: #9cc9da;
-    opacity: 0.4;
-    filter: blur(20rem);
-    width: 68.4rem;
-    height: 68.4rem;
-    border-radius: 50%;
-    pointer-events: none;
-    z-index: -1;
+  content: "";
+  position: absolute;
+  top: $top;
+  right: $right;
+  background-color: rgba($color: #9cc9da, $alpha: 4);
+  filter: blur(20rem);
+  width: 68.4rem;
+  height: 68.4rem;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: -1;
 }
 
 @mixin respond-to($breakpoint) {
-    @media #{$breakpoint} {
-        @content;
-    }
+  @media #{$breakpoint} {
+    @content;
+  }
 }
