--- a/styles/main.css
+++ b/styles/main.css
@@ -100,11 +100,14 @@ body {
   padding: 2.4rem 1.6rem 8rem;
   margin-bottom: 6.4rem;
   background-color: #faf5f3;
-  background-image: url("../../assets/images/pattern-light-bg.svg"); }
+  background-image: url("../../assets/images/pattern-light-bg.svg");
+  position: relative;
+  z-index: 10;
+  overflow: hidden; }
   .hero .content__title {
     background: linear-gradient(107deg, #ff9a60 -11.37%, #062630 61.84%);
-    background-clip: text;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 2.4rem; }
   .hero .content__description {
@@ -125,8 +128,30 @@ body {
     display: block; }
     .hero .content__image img {
       width: 100%;
-      height: auto; }
+      height: auto;
+      border-radius: 1.2rem; }
 
+@media (min-width: 48em) {
+  .hero {
+    padding: 3.2rem 3.2rem 8rem;
+    row-gap: 6.4rem;
+    margin-bottom: 8rem; }
+    .hero::after {
+      content: "";
+      position: absolute;
+      top: 75%;
+      right: -47%;
+      background-color: #9cc9da;
+      filter: blur(20rem);
+      width: 68.4rem;
+      height: 68.4rem;
+      border-radius: 50%;
+      pointer-events: none;
+      z-index: -1; }
+    .hero .content__title {
+      font-size: 6.2rem; }
+    .hero .content__description {
+      letter-spacing: 0; } }
 /* .hero { */
 /*   background-image: url("../assets/images/pattern-light-bg.svg"); */
 /*   background-color: $color-neutral-100; */
