Complete hero section renewal desktop version

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -47,3 +47,4 @@ $border-radius-full: 999px;
 $breakpoint-tablets: "(min-width: 48em)";
 $breakpoint-large-tablets: "(min-width: 64em)";
 $breakpoint-desktops: "(min-width: 75em)";
+/* $breakpoint-desktops: "(min-width: 87.5em)"; */
