--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,23 +1,25 @@
-*, *::after, *::before {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
-    scroll-behavior: smooth;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: "Martian Mono", sans-serif;
-    font-weight: 500;
-    line-height: 1;
-    color: $color-neutral-900;
+  font-family: "Martian Mono", sans-serif;
+  font-weight: 500;
+  line-height: 1;
+  color: $color-neutral-900;
 }
 
-@media (min-width: 64.063em) and (max-width: 85.69em) {
-    html {
-        font-size: 56.25%;
-    }
+@media (min-width: 70em) and (max-width: 81.25em) {
+  html {
+    font-size: 56.25%;
+  }
 }
